--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.7.1",
     "expo": "~54.0.33",
+    "expo-haptics": "~15.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.563.0",
@@ -22,5 +23,9 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "^19.2.13",
+    "@types/react-native": "^0.72.8"
+  }
 }
