--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.12.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.7.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~54.0.33",
     "expo-haptics": "~15.0.8",
     "expo-sqlite": "~16.0.10",
